# lazypp

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  dune-project  lazypp.opam
.github/workflows/: ci.yml
frontend/: dune  frontend.ml
src/: ast.ml  ast.mli  astS.mli  config.ml  config.mli  configS.mli  dataStructures.ml  dataStructures.mli  dataStructuresS.mli  dune  err.ml  err.mli  errS.mli  identifier.ml  identifier.mli  lazypp.ml  lazypp.mli  lexer.mll  loc.ml  loc.mli  locS.mli  mark.ml  mark.mli  markS.mli  occurrence.ml  occurrence.mli  output.ml  output.mli  outputS.mli  parse.ml  parse.mli  parser.mly  sourceFile.ml  sourceFile.mli  warn.ml  warn.mli  warnS.mli
tests/freertos/: list.c  test.sh
tests/freertos/original/include/: list_pp.h
tests/freertos/simplified-by-hand/: croutine.c  event_groups.c  list.c  notes.txt  queue.c  tasks.c  timers.c
tests/freertos/simplified-by-hand/include/: FreeRTOS.h  atomic.h  list.h  task.h  timers.h
tests/freertos/simplified-by-hand/portable/MemMang/: heap_1.c  heap_2.c  heap_5.c
tests/lazyppTest/: dune  lazyppTest.ml  lazyppTest.mli
tests/line_numbers/: dune  line_numbers.c  line_numbers.ml
tests/simple/: dune  norm.c.disabled  norm.c.expected  norm.c.pp  simple.c  simple.c.expected  simple.ml
